<?xml version="1.0" encoding="UTF-8"?>
<!--
Copyright (c) 2023, Oracle and/or its affiliates.
Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl/
-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<parent>
		<groupId>com.oracle.cloud.spring</groupId>
		<artifactId>spring-cloud-oci-samples</artifactId>
		<version>1.0.0-SNAPSHOT</version>
	</parent>
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.oracle.cloud.spring.sample.queue</groupId>
	<artifactId>spring-cloud-oci-queue-sample</artifactId>
	<name>spring-cloud-oci-queue-sample</name>
	<description>spring-cloud-oci-queue-sample</description>
	<licenses>
		<license>
			<name>The Universal Permissive License (UPL), Version 1.0</name>
			<url>https://oss.oracle.com/licenses/upl/</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<properties>
		<java.version>21</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>com.oracle.cloud.spring</groupId>
			<artifactId>spring-cloud-oci-starter-queue</artifactId>
		</dependency>
		<dependency>
			<groupId>com.oracle.cloud.spring.sample.common</groupId>
			<artifactId>spring-cloud-oci-common-samples-utils</artifactId>
		</dependency>
		<dependency>
			<groupId>com.oracle.cloud.spring.sample.common</groupId>
			<artifactId>spring-cloud-oci-common-samples-utils</artifactId>
			<type>test-jar</type>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
